--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css"
     />
-    <title>株式会社ＳＨＯＳＥＮ</title>
+    <title>株式会社SHOSEN</title>
+
+    <style>
+      body {
+        color:#8B0000;
+      }
+    </style>
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-red-200 ">
     <nav
       class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg"
     >
@@ -62,17 +68,6 @@
                 ><span class="lg:hidden inline-block ml-2">Tweet</span></a
               >
             </li>
-            <li class="flex items-center">
-              <a
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
-                ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "
-                ></i
-                ><span class="lg:hidden inline-block ml-2">Star</span></a
-              >
-            </li>
-      
           </ul>
         </div>
       </div>
@@ -95,10 +90,10 @@
           <div class="items-center flex flex-wrap">
             <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
               <div class="pr-12">
-                <h1 class="text-black font-semibold text-5xl">
-                  株式会社ＳＨＯＳＥＮは
+                <h1 class=" font-semibold text-5xl">
+                  株式会社SHOSENは
                 </h1>
-                <p class="mt-4 text-lg text-black  text-6xl">
+                <p class="mt-4 text-lg text-6xl">
                   バニラビーンズの専門商社です。
                 </p>
               </div>
