--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               <img
                 alt="..."
                 class="max-w-full rounded-lg shadow-lg"
-                src="assets/img/picture.png"
+                src="assets/img/Picture.png"
               />
             </div>
             <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
