--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   <div class="w-full md:w-5/12 ml-auto mr-auto px-4 " >
                     <div class="md:pr-12 pb-20">
                    
-                      <h3 class="text-3xl font-semibold uppercase mt-5 ">Groumet</h3>
+                      <h3 class="text-3xl font-semibold  mt-5 ">Gourmet</h3>
                       <p class="mt-4 text-lg leading-relaxed text-gray-600">
                        水分を多く含むことは高品質バニラの重要な要素です。
                        品質の高いバニラほど水分が多く、その外側にはオイルがにじんで見えます。触った後には手にオイルが残るほどです。
@@ -335,7 +335,7 @@
                 <div class="w-full md:w-5/12 ml-auto mr-auto px-4 " >
                   <div class="md:pr-12 ">
                  
-                    <h3 class="text-3xl font-semibold uppercase mt-5 ">Planifolia</h3>
+                    <h3 class="text-3xl font-semibold  mt-5 ">Planifolia</h3>
                     <p class="mt-4 text-lg leading-relaxed text-gray-600">
                     インドネシアのプラニフォリアバニラは甘くてクリーミーかつ、特徴的な土もしくは木のような風味ももっています。大胆であり、ほのかに甘くトンガのバニラの様な風味です。
                     チョコレートやキャラメルなど強い風味の中でも存在感が失われることはありません。プラニフォリアバニラを加えることで全てのデザートをより洗練された味へと変えることができます。
